istio/prod/virtualservices.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - grafana.prod.iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
    - argo.prod.iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  hosts:
    - rollouts.prod.iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: argo-rollouts-dashboard.argo-rollouts.svc.cluster.local
            port:
              number: 3100
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: apps
spec:
  hosts:
    - app.iqbalhakim.ink
    - iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: frontend.apps.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend
  namespace: apps
spec:
  hosts:
    - api.iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: backend.apps.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: litmuschaos
  namespace: litmus
spec:
  hosts:
    - litmus.prod.iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: litmus-frontend-service.litmus.svc.cluster.local
            port:
              number: 9091
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
    - prometheus.prod.iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
            port:
              number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tempo
  namespace: monitoring
spec:
  hosts:
    - tempo.prod.iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: tempo.monitoring.svc.cluster.local
            port:
              number: 3100
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: loki
  namespace: monitoring
spec:
  hosts:
    - loki.prod.iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: loki.monitoring.svc.cluster.local
            port:
              number: 3100
